fix: dropdown com z-index menor que o header

--- a/core/static/core/css/base.css
+++ b/core/static/core/css/base.css
@@ -36,7 +36,6 @@ header {
     justify-content: space-between;
     width: 100%;
     height: 101px;
-    z-index: 1000;
 }
 
 /* LOGO E MENU */
