--- a/fila/static/fila/css/detalhes.css
+++ b/fila/static/fila/css/detalhes.css
@@ -125,6 +125,7 @@
     padding: 0;
     cursor: pointer;
     border-radius: 5px;
+    z-index: -1;
 }
 
 .caret {
